--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin: 0 !important;
+}
 
 .hidden {
   display: none;
