--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,89 @@
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
 
 body {
+  position: relative;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   margin: 0 !important;
 }
 
+span,
+div,
+p,
+button,
+input {
+  font-family: "Quicksand", sans-serif;
+}
+
 .hidden {
   display: none;
+}
+
+.vertical-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -65%);
+}
+
+#login-form {
+  width: 470px;
+  margin: 0 auto;
+}
+
+#login-form input {
+  display: inline-block;
+  font-size: 30px;
+  color: #FFFFFF;
+  padding: 10px;
+}
+
+#login-form input[type="submit"] {
+  width: 30%;
+  background: #000000;
+  border-radius: 5px;
+  border: none;
+}
+
+#login-form input[type="text"] {
+  width: 62%;
+  background: rgba(0,0,0,0.1);
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #000000;
+}
+
+#login-form input[type="text"]::placeholder {
+  color: #FFFFFF;
+}
+
+#greeting {
+  color: #000;
+  font-size: 30px;
+  text-align: center;
+}
+
+#clock {
+  font-size: 60px;
+  text-align: center;
+  margin-top: 0;
+}
+
+#quote {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  font-size: 16px;
+  text-align: center;
+}
+
+#weather {
+  text-align: center;
+  margin-top: 30px;
 }
