[MOD] css & todolist check 기능 & 사용자별 todolist

--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,36 @@ body {
   margin: 0 !important;
 }
 
+@font-face {
+  font-family: "NotoSansKR";
+  src: url("../fonts/NotoSansKR-Regular-Alphabetic.eot");
+  src: url("../fonts/NotoSansKR-Regular-Alphabetic.eot?#iefix")
+      format("embedded-opentype"),
+    url("../fonts/NotoSansKR-Regular-Alphabetic.svg#NotoSansKR-Regular-Alphabetic")
+      format("svg"),
+    url("../fonts/NotoSansKR-Regular-Alphabetic.ttf") format("truetype"),
+    url("../fonts/NotoSansKR-Regular-Alphabetic.woff") format("woff"),
+    url("../fonts/NotoSansKR-Regular-Alphabetic.woff2") format("woff2");
+  unicode-range: U+AC00- U+D7A3;
+}
+
+@font-face {
+  font-family: "Quicksand";
+  src: url("../fonts/Quicksand-Medium.eot");
+  src: url("../fonts/Quicksand-Medium.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/Quicksand-Medium.svg#Quicksand-Medium") format("svg"),
+    url("../fonts/Quicksand-Medium.ttf") format("truetype"),
+    url("../fonts/Quicksand-Medium.woff") format("woff"),
+    url("../fonts/Quicksand-Medium.woff2") format("woff2");
+  unicode-range: U+0041-005A, U+0061-007A, U+0030-0039;
+}
+
 span,
 div,
 p,
 button,
 input {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Quicksand", "NotoSansKR";
 }
 
 .hidden {
@@ -39,7 +63,7 @@ input {
 #login-form input {
   display: inline-block;
   font-size: 30px;
-  color: #FFFFFF;
+  color: #ffffff;
   padding: 10px;
 }
 
@@ -52,14 +76,14 @@ input {
 
 #login-form input[type="text"] {
   width: 62%;
-  background: rgba(0,0,0,0.1);
+  background: rgba(0, 0, 0, 0.1);
   outline: none;
   border: none;
   border-bottom: 1px solid #000000;
 }
 
 #login-form input[type="text"]::placeholder {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 #greeting {
@@ -86,4 +110,96 @@ input {
 #weather {
   text-align: center;
   margin-top: 30px;
+}
+
+#weather span:last-child {
+  font-weight: 700;
+  position: relative;
+  margin-left: 5px;
+  padding-left: 25px;
+}
+
+#weather span:last-child::before {
+  content: "";
+  width: 25px;
+  height: 25px;
+  background-image: url(../images/ic_temperature.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+#todo-form input {
+  width: 300px;
+  background-color: rgba(255, 255, 255, 0.1);
+  font-size: 18px;
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid #000;
+  padding: 5px 5px;
+  margin: 0 auto;
+}
+
+#todo-list {
+  width: 300px;
+  height: 250px;
+  overflow: auto;
+  padding: 6px !important;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  border: 1px solid #000;
+}
+
+#todo-list li {
+  list-style-type: none;
+  position: relative;
+  font-size: 16px;
+}
+
+#todo-list span {
+  padding-left: 25px;
+}
+
+#todo-list span.checked {
+  text-decoration: line-through;
+}
+
+#todo-list span::before {
+  content: "👉🏻";
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: -5px;
+  left: 0;
+}
+
+#todo-list li:not(:last-child) {
+  list-style-type: none;
+  margin-bottom: 5px;
+}
+
+#todo-list button {
+  cursor: pointer;
+  margin-left: 5px;
+  border-radius: 5px;
+  border: none;
+}
+
+#todo-list button.btn-chk {
+  background-color: #d4e8cc;
+}
+
+#todo-list button.btn-chk:hover {
+  background-color: #c6d9bf;
+}
+
+#todo-list button.btn-del {
+  background-color: #e8d3cc;
+}
+
+#todo-list button.btn-del:hover {
+  background-color: #d9c5bf;
 }
