--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ input {
   font-family: "Quicksand", "NotoSansKR";
 }
 
+button {
+  cursor: pointer;
+}
+
 .hidden {
   display: none;
 }
@@ -77,7 +81,7 @@ input {
 }
 
 #login-form input[type="text"] {
-  width: 62%;
+  width: 69%;
   background: rgba(0, 0, 0, 0.1);
   outline: none;
   border: none;
@@ -89,9 +93,29 @@ input {
 }
 
 #greeting {
+  margin: 20px 0;
+  text-align: center;
+}
+
+#greeting div {
+  display: inline-block;
   color: #000;
   font-size: 30px;
   text-align: center;
+  margin-right: 10px;
+}
+
+#greeting button {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background: #FFF;
+  border: none;
+  border-radius: 5px;
+}
+
+#greeting button:hover {
+  background: rgb(240, 240, 240);
 }
 
 #clock {
@@ -118,13 +142,13 @@ input {
   font-weight: 700;
   position: relative;
   margin-left: 5px;
-  padding-left: 25px;
+  padding-left: 20px;
 }
 
 #weather span:last-child::before {
   content: "";
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   background-image: url(../images/ic_temperature.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -192,7 +216,6 @@ input {
 #todo-list button {
   width: 25px;
   height: 20px;
-  cursor: pointer;
   margin-left: 5px;
   border-radius: 5px;
   border: none;
